fix: Fixed multi tasks User GET + Added Tag for Swagger